--- a/index.html
+++ b/index.html
@@ -1,46 +1,56 @@
-Política de Privacidade – Barcelos Popular Bets
-A sua privacidade é importante para nós.
- Esta Política de Privacidade descreve como tratamos as informações dos utilizadores na aplicação Barcelos Popular Bets.
+<!DOCTYPE html>
+<html lang="pt-PT">
+<head>
+  <meta charset="UTF-8">
+  <title>Política de Privacidade – Barcelos Bets</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body style="font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; max-width: 900px; margin: auto;">
 
-1. Dados Recolhidos
-A aplicação não recolhe dados pessoais sensíveis, como nome completo, morada, número de telefone ou informações financeiras.
-Os únicos dados que podem ser recolhidos são:
-Dados de Login (criado manualmente dentro da app)
+  <h1>Política de Privacidade – Barcelos Bets</h1>
 
+  <p>A sua privacidade é importante para nós.</p>
+  <p>Esta Política de Privacidade descreve como tratamos as informações dos utilizadores na aplicação <strong>Barcelos Bets</strong>.</p>
 
-Identificadores anónimos de publicidade, fornecidos automaticamente pelos serviços de anúncios;
+  <h2>1. Dados Recolhidos</h2>
+  <p>A aplicação não recolhe dados pessoais sensíveis, como nome completo, morada, número de telefone ou informações financeiras.</p>
 
+  <p>Os únicos dados que podem ser recolhidos são:</p>
+  <ul>
+    <li>Dados de login (criados manualmente dentro da aplicação)</li>
+    <li>Identificadores anónimos de publicidade, fornecidos automaticamente pelos serviços de anúncios</li>
+    <li>Informações técnicas do dispositivo (modelo, idioma, sistema operativo, país), usadas apenas para fins estatísticos e personalização de anúncios</li>
+  </ul>
 
-Informações técnicas do dispositivo (por exemplo, modelo, idioma, sistema operativo, país), usadas apenas para fins estatísticos e de personalização de anúncios.
+  <h2>2. Redes de Publicidade</h2>
+  <p>A aplicação utiliza o <strong>Google AdMob</strong> para exibir anúncios.</p>
+  <p>Essa plataforma pode usar identificadores de dispositivo e cookies para personalizar o conteúdo publicitário e medir o desempenho dos anúncios.</p>
+  <p>Saiba mais sobre como o Google trata os dados:</p>
+  <p>
+    <a href="https://policies.google.com/technologies/ads" target="_blank" rel="noopener">
+      https://policies.google.com/technologies/ads
+    </a>
+  </p>
 
+  <h2>3. Finalidade da Aplicação</h2>
+  <p>O <strong>Barcelos Bets</strong> é uma aplicação recreativa e educativa.</p>
+  <p>Não envolve apostas com dinheiro real, nem promove qualquer forma de jogo financeiro.</p>
+  <p>O objetivo é apenas o entretenimento e a simulação de resultados desportivos fictícios.</p>
 
+  <h2>4. Segurança e Armazenamento</h2>
+  <p>Nenhum dado pessoal sensível é armazenado em servidores externos.</p>
+  <p>As informações básicas (como nome de utilizador, email, palavra-passe e preferências) podem ser guardadas localmente no dispositivo do utilizador e são apagadas quando a aplicação é desinstalada.</p>
 
-2. Redes de Publicidade
-A aplicação utiliza Google AdMob para exibir anúncios.
- Essa plataforma pode usar identificadores de dispositivo e cookies para personalizar o conteúdo publicitário e medir desempenho dos anúncios.
-Saiba mais sobre como o Google AdMob trata os dados:
- 🔗 https://policies.google.com/technologies/ads
+  <h2>5. Direitos do Utilizador</h2>
+  <p>O utilizador pode, a qualquer momento:</p>
+  <ul>
+    <li>Solicitar a eliminação dos seus dados locais</li>
+    <li>Limitar a personalização de anúncios através das definições de privacidade do dispositivo (Android → Configurações → Privacidade → Anúncios)</li>
+  </ul>
 
+  <h2>6. Contacto</h2>
+  <p>Se tiver alguma dúvida sobre esta Política de Privacidade, entre em contacto através do email:</p>
+  <p><strong>📧 masm.dev6@gmail.com</strong></p>
 
-
-3. Finalidade da Aplicação
-O Barcelos Popular Bets é uma aplicação recreativa e educativa.
- Não envolve apostas com dinheiro real, nem promove qualquer forma de jogo financeiro.
- O objetivo é apenas o entretenimento e a simulação de resultados desportivos fictícios.
-
-4. Segurança e Armazenamento
-Nenhum dado pessoal sensível é armazenado em servidores externos.
- As informações básicas (como o nome de utilizador,mail , palavra-passe e preferências) podem ser guardadas localmente no dispositivo do utilizador e são apagadas quando a aplicação é desinstalada.
-
-5. Direitos do Utilizador
-O utilizador pode a qualquer momento:
-Solicitar a eliminação dos seus dados locais;
-
-
-Limitar a personalização de anúncios através das definições de privacidade do dispositivo (Android → Configurações → Privacidade → Anúncios).
-
-
-
-6. Contacto
-Se tiver alguma dúvida sobre esta Política de Privacidade, entre em contacto através do e-mail:
- 📧 masm.dev6@gmail.com
+</body>
+</html>
